/**
 * Copyright 2021 Gravitational, Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
import React from 'react';
import { Sample0, Sample2 } from './FilterByLabelList.story';
import { render } from 'design/utils/testing';

test('rendering with 0 filters', () => {
  const { container } = render(<Sample0 />);
  expect(container).toMatchSnapshot();
});

test('rendering with 2 filters', () => {
  const { container } = render(<Sample2 />);
  expect(container).toMatchSnapshot();
});
